<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/root_view"
    android:numColumns="auto_fit"
    android:orientation="vertical"
    android:background="@drawable/fast_food"
    android:padding="8dp"
    tools:context="com.example.android.efikphrase.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Category_Greetings_Etiquette"
        android:background="@color/Category_GreetingsEtiquette"
        android:id="@+id/Category_Greetings_Etiquette"
        style="@style/Style_Category"
        android:layout_margin="8dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Category_Animals"
        android:background="@color/Category_Animals"
        style="@style/Style_Category"
        android:layout_margin="@dimen/layout_margin"
        android:id="@+id/category_Animals"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Category_Around_The_House"
        android:background="@color/Category_Around_The_House"
        style="@style/Style_Category"
        android:layout_margin="@dimen/layout_margin"
        android:id="@+id/around_the_house"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Category_Clothing"
        android:background="@color/Category_Clothing"
        style="@style/Style_Category"
        android:layout_margin="@dimen/layout_margin"
        android:id="@+id/Clothing"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Category_Colours"
        android:background="@color/Category_Colours"
        style="@style/Style_Category"
        android:layout_margin="@dimen/layout_margin"
        android:id="@+id/Category_Colors"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/Category_Landscape"
        android:text="@string/Category_Landscape"
        style="@style/Style_Category"
        android:layout_margin="@dimen/layout_margin"
        android:id="@+id/category_landscape"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Category_Directions"
        android:background="@color/Category_Directions"
        style="@style/Style_Category"
        android:layout_margin="@dimen/layout_margin"
        android:id="@+id/category_directions"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Category_Education"
        android:background="@color/Category_Education"
        style="@style/Style_Category"
        android:layout_margin="@dimen/layout_margin"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Category_Food_and_Drink"
        android:background="@color/Category_Food_and_Drink"
        style="@style/Style_Category"
        android:layout_margin="@dimen/layout_margin"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Category_Health"
        android:background="@color/Category_Health"
        style="@style/Style_Category"
        android:layout_margin="@dimen/layout_margin"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Category_Meeting_People"
        android:background="@color/Category_Meeting_People"
        style="@style/Style_Category"
        android:layout_margin="@dimen/layout_margin"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Category_Religion"
        android:background="@color/Category_Religion"
        style="@style/Style_Category"
        android:layout_margin="@dimen/layout_margin"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Category_Sums_Ordinals"
        android:background="@color/Category_Sums_Ordinals"
        style="@style/Style_Category"
        android:layout_margin="@dimen/layout_margin"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Category_Time"
        android:background="@color/Category_Time"
        style="@style/Style_Category"
        android:layout_margin="@dimen/layout_margin"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Category_Verbs_and_Pronouns"
        android:background="@color/Category_Verbs_and_Pronouns"
        style="@style/Style_Category"
        android:layout_margin="@dimen/layout_margin"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Category_Weather"
        android:background="@color/Category_Weather"
        style="@style/Style_Category"
        android:layout_margin="@dimen/layout_margin"/>


</LinearLayout>

</ScrollView>